--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.5.0",
+    "formik": "^1.5.8",
     "lodash": "^4.17.11",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-vis": "^1.11.7",
     "redux": "^4.0.4"
   },
   "scripts": {
@@ -41,6 +43,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "node-sass": "^4.12.0"
   }
 }
