--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.5.0",
+    "axios": "^0.19.0",
     "formik": "^1.5.8",
+    "json-server": "^0.15.1",
     "lodash": "^4.17.11",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -14,13 +16,15 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-vis": "^1.11.7",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-actions": "^2.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "json-server --watch src/services/db.json --port 4000"
   },
   "eslintConfig": {
     "extends": "react-app"
